--- a/action.yaml
+++ b/action.yaml
@@ -23,6 +23,11 @@ inputs:
     required: true
     default: "."
 
+  dockerfile:
+    type: "string"
+    required: true
+    default: "./Dockerfile"
+
 runs:
   using: "composite"
   steps:
@@ -46,6 +51,7 @@ runs:
       uses: "docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4"
       with:
         context: "${{ inputs.context }}"
+        file: "${{ inputs.dockerfile }}"
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
